0.5.0 2016-08-11
        - Improved I5 Conversion.
        - Added Guttenberg conversion.
        - Improved conversion tool use different converter.
        - Remove guttenberg conversion tool.
        - Added id_offset parameter to conversion command.
        - Added import_command test.

0.4.4 2016-08-08
        - Fixed unicode in extensions (retrieve and store).
				- Fixed support for Mojolicious 7.
				- Introduced test suite for JavaScript.
        - Made action buttons dynamic.
				- Fix pagebreaks using json.
				- Added import for i5 documents.

0.4.2 2016-03-21
        - Fixed unicode handling.

0.4.1 2016-03-02
        - Improved support for multi-user plugins.
        - Improved attached database handling.
        - Separated initialization step.

0.4.0 2016-01-12
        - Initial release on GitHub.

0.3.1 2015-09-01
        - First release in KorAP infrastructure.

0.3.0 2015-07-20
        - Decoupled multi-corpora/multi-user configuration.

0.2.1 2015-07-09
        - Added context collapsing.

0.2.0 2015-06-15
        - Added export to RTF.

0.1.1 2015-06-08
        - Initial release.